--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ h2 {
 #welcome-section {
     width: 100%;
     height: 100vh;
-    background-image: url(img/fundo-M.jpg);
+    background-image: url(../img/fundo-M.jpg);
     background-size: cover;
     position: relative;
 }
