--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,6 @@ footer a:hover {
     }
 
     #container-projects {
-        justify-content: center;
+        justify-content: space-between;
     }
 }
